--- a/myCart.html
+++ b/myCart.html
@@ -33,38 +33,36 @@
 
 <br>
 <div id = "cartDescription">
-<h5 class="card-title">Cart List</h5>
-<p class="card-text">Items that are to be bought are stored here</p>
+<h3>Cart List</h3>
+<p>Items that are to be bought are stored here</p>
 </div>
-<div class="container mt-4">
+<div class="container">
   <div class="row">
-      <div class="col-md-8">
+      <div class="col-8">
           <div class="card">
               <div class="card-body">
                   <div class="row">
-                      <div class="col-md-6">
-                        <h6>Receipt and Costs</h6>
-                        <p>Total Item cost: <strong>$50.00</strong></p>
-                        <p>Service fees: <strong>$0.00</strong></p>
-                        <hr>
-                        <p>Total cost: <strong>$50.00</strong></p>
+                    <div class="col-6">
+                      <h6>Receipt and Costs</h6>
+                      <p>Total Item cost: $50.00</p>
+                      <p>Service fees: $0.00</p>
+                      <p>Total cost: $50.00</p>
                       </div>
                       <div class="col-md-6">
-                          <h6>Item List</h6>
-                          <div class="card mb-3">
-                              <div class="card-body">
-                                  <p>Bitcoin and CryptoCurrency<br>by (Insert Author)<br>uploaded on 9th of May 2023</p>
-                              </div>
-                              <button type="button" class="btn-close" aria-label="Close"></button>
-                          </div>
+                      <h6>Item List</h6>
+                      <div class="card mb-3">
+                      <div class="card-body">
+                      <p>Bitcoin and CryptoCurrency<br>by (Insert Author)<br>uploaded on 9th of May 2023</p>
                       </div>
+                      </div>
+                  </div>
                   </div>
                   <button class="btn btn-success w-100">Pay Now</button>
               </div>
           </div>
       </div>
       <div class="col-md-4">
-          <button class="btn btn-primary w-100 mb-2">View transaction history</button>
+        <a href = "history.html"><button class="btn btn-primary w-100 mb-2">View transaction history</button></a>
       </div>
   </div>
 </div>
