--- a/myCart.html
+++ b/myCart.html
@@ -10,14 +10,13 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-success navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">TechTonic World</a>
+      <a class="navbar-brand" href="homepage.html">TechTonic World</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="lessons.html">My lessons</a></li> 
           <li><a class="nav-link" href="newslines.html">NewsLines</a></li>
           <li><a class="nav-link" href="courses.html">Courses</a></li>
           <li><a class="nav-link" href="myCart.html"><img src = "images/cart.png" class = "cartImg">Cart</a></li>
@@ -42,22 +41,25 @@
           <div class="card">
               <div class="card-body">
                   <div class="row">
-                    <div class="col-6">
-                      <h6>Receipt and Costs</h6>
-                      <p>Total Item cost: $50.00</p>
-                      <p>Service fees: $0.00</p>
-                      <p>Total cost: $50.00</p>
-                      </div>
-                      <div class="col-md-6">
-                      <h6>Item List</h6>
-                      <div class="card mb-3">
-                      <div class="card-body">
-                      <p>Bitcoin and CryptoCurrency<br>by (Insert Author)<br>uploaded on 9th of May 2023</p>
-                      </div>
-                      </div>
+                  <div class="col-6">
+                    <h5>Receipt and Costs</h5>
+                    <p>Total Item cost: $50.00</p>
+                    <p>Service fees: $0.00</p>
+                    <p>Total cost: $50.00</p>
+                  </div>
+                  <div class="col-md-6">
+                    <h5>Item List</h5>
+                  <div class="card mb-3">
+                  <div class="card-body">
+                    <img src ="images/OIP.jpg">
+                    <p>Bitcoin and CryptoCurrency<br>by (Insert Author)<br>uploaded on 9th of May 2023</p>
                   </div>
                   </div>
-                  <button class="btn btn-success w-100">Pay Now</button>
+                  </div>
+                  </div>
+                  <button style="width: 60%; border-radius: 10px; height: 50px; background-color: rgb(38, 241, 119); color: azure;">
+                    <a href ="paymentchoice.html">pay Now</a>
+                  </button>
               </div>
           </div>
       </div>
