--- a/bitcoinCrypto.html
+++ b/bitcoinCrypto.html
@@ -10,16 +10,15 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-success navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">TechTonic World</a>
+      <a class="navbar-brand" href="homepage.html">TechTonic World</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="lessons.html">My lessons</a></li> 
           <li><a class="nav-link" href="newslines.html">NewsLines</a></li>
-          <li><a class="nav-link" href="myCourses.html">Courses</a></li>
+          <li><a class="nav-link" href="courses.html">Courses</a></li>
           <li><a class="nav-link" href="myCart.html"><img src = "images/cart.png" class = "cartImg">Cart</a></li>
         </ul>
 
@@ -35,7 +34,7 @@
         <h2>BitCoin and CryptoCurrency: A comprehensive overview</h2>
         <div class="row">
             <div class="col-md-8">
-                <img src="images/OIP.jpg" class="img-fluid" alt="Bitcoin">
+                <img src="images/OIP.jpg" class="img-fluid">
                 <div class="card mt-3 p-3 bg-light">
                     <h5 class="card-title">By (Insert Author)</h5>
                     <p class="card-text">Uploaded on 9th of May 2023</p>
