--- a/courses.html
+++ b/courses.html
@@ -10,16 +10,15 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-success navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">TechTonic World</a>
+      <a class="navbar-brand" href="homepage.html">TechTonic World</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="lessons.html">My lessons</a></li> 
           <li><a class="nav-link" href="newslines.html">NewsLines</a></li>
-          <li><a class="nav-link" href="myCourses.html">Courses</a></li>
+          <li><a class="nav-link" href="courses.html">Courses</a></li>
           <li><a class="nav-link" href="myCart.html"><img src = "images/cart.png" class = "cartImg">Cart</a></li>
         </ul>
 
@@ -36,7 +35,7 @@
   <div class="card mt-3">
       <div id = "courseDetails">
           <div>
-              <img src="images/OIP.jpg" class = "bitcoin" alt="Bitcoin">
+              <img src="images/OIP.jpg">
           </div>
           <div>
               <div class="card-body">
