--- a/newslines.html
+++ b/newslines.html
@@ -10,14 +10,13 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-success navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">TechTonic World</a>
+      <a class="navbar-brand" href="homepage.html">TechTonic World</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="lessons.html">My lessons</a></li> 
           <li><a class="nav-link" href="newslines.html">NewsLines</a></li>
           <li><a class="nav-link" href="courses.html">Courses</a></li>
           <li><a class="nav-link" href="myCart.html"><img src = "images/cart.png" class = "cartImg">Cart</a></li>
