--- a/one-timepin.html
+++ b/one-timepin.html
@@ -5,6 +5,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
       <link rel="stylesheet" href="CSS/stylesheet.css">
+      <style>
+        #onetimePinDetails{
+            text-align:center;
+            margin-top: 50px;
+        }
+
+        input{
+            width: 20%;
+            border-radius: 10px;
+            height: 50px;
+        }
+
+        #pin{
+            width: 50%;
+        }
+      </style>
     </head>
       
   <body>
@@ -19,5 +35,19 @@
         <p class="navbar-brand">TechTonic World</a>
       </div>
   </nav>
-
+  <div id = "onetimePinDetails">
+  <form action="homepage.html">
+    <h1>One time pin</h1>
+    <h2>Enter in the pin below that is sent to the specified email to proceed on</h2>
+  <br><br><br>
+  <input id = "pin" type="text" required/>
+  <br><br>
+  <input type = "submit" style="background-color: blue; color: white;" onclick="login()">
+  </form>
+  </div>
+  <script>
+    function login(){
+        alert("Login Succesful! Welcome User!")
+    }
+  </script>
   </body>
