--- a/paymentchoice.html
+++ b/paymentchoice.html
@@ -10,11 +10,10 @@
   <body>
       <nav class="navbar navbar-expand-sm bg-success navbar-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">TechTonic World</a>
+        <a class="navbar-brand" href="homepage.html">TechTonic World</a>
   
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="lessons.html">My lessons</a></li> 
             <li><a class="nav-link" href="newslines.html">NewsLines</a></li>
             <li><a class="nav-link" href="courses.html">Courses</a></li>
             <li><a class="nav-link" href="myCart.html"><img src = "images/cart.png" class = "cartImg">Cart</a></li>
