--- a/bitcoinCrypto.html
+++ b/bitcoinCrypto.html
@@ -5,19 +5,37 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="CSS/stylesheet.css">
+    <style>
+      .card{
+        margin-bottom: 30px;
+        background-color: lightgray;
+        border-radius: 10px;
+        padding-left: 20px;
+        padding-right: 20px;
+      }
+    </style>
   </head>
     
 <body>
     <nav class="navbar navbar-expand-sm bg-success navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="homepage.html">TechTonic World</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
-          <li><a class="nav-link" href="newslines.html">NewsLines</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              User Settings
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">My courses</a></li>
+              <li><a class="dropdown-item" href="history.html">Transaction History</a></li>
+              <li><a class="dropdown-item" href="#">Settings</a></li>
+              <li><a class="dropdown-item" href="#">Certificates</a></li>
+              <li><a class="dropdown-item" href="#">My courses</a></li>
+              <li><a class="dropdown-item" href="index.html">Log out</a></li>
+            </ul>
+          </li>
+          <li><a class="nav-link" href="#">NewsLines</a></li>
           <li><a class="nav-link" href="courses.html">Courses</a></li>
           <li><a class="nav-link" href="myCart.html"><img src = "images/cart.png" class = "cartImg">Cart</a></li>
         </ul>
@@ -30,41 +48,47 @@
     </div>
     </nav>
 
-    <div class="container mt-4">
+    <div class="container">
         <h2>BitCoin and CryptoCurrency: A comprehensive overview</h2>
         <div class="row">
-            <div class="col-md-8">
-                <img src="images/OIP.jpg" class="img-fluid">
-                <div class="card mt-3 p-3 bg-light">
+            <div class="col-sm-8">
+                <img src="images/bitcoinCrypto.jpg"  id = "bitcoin">
+                <div class="card">
                     <h5 class="card-title">By (Insert Author)</h5>
                     <p class="card-text">Uploaded on 9th of May 2023</p>
                     <p class="card-text">Subscription cost for full lesson package after free trial: $50.00</p>
                 </div>
-                <div class="mt-3 p-3 bg-secondary text-white rounded">
+                <div class="card">
                     <h3>Description of package</h3>
                     <p>
-                        Bitcoin is a form of money that only exists online. It's made headlines around the world, but many people don't really understand how bitcoin and other cryptocurrencies work. In this course, Tom Geller demystifies bitcoin, revealing the promise and perils of the crypto economy. First, Tom explains what bitcoin is, how it creates an unchangeable ledger, how it compares to traditional money, and how to contextualize the energy expended in keeping bitcoin secure. Next, he explains how to get started by creating a cryptocurrency wallet, buying and selling cryptocurrency, and protecting your transactions. He discusses other top cryptocurrencies and the full-featured programming languages behind some cryptocurrency networks, then explains how derivative assets such as NFTs figure into the landscape. Finally, Tom covers how to track a cryptocurrency payment’s passage precisely, examines threats to cryptocurrency, and goes over connecting with others in cryptocurrency communities.
+                      Bitcoin is a form of money that only exists online. 
+                      It's made headlines around the world, but many people don't really understand how bitcoin and other cryptocurrencies work. 
+                      In this course, Tom Geller demystifies bitcoin, revealing the promise and perils of the crypto economy. 
+                      First, Tom explains what bitcoin is, how it creates an unchangeable ledger, how it compares to traditional money, and how to contextualize the energy expended in keeping bitcoin secure. 
+                      Next, he explains how to get started by creating a cryptocurrency wallet, buying and selling cryptocurrency, and protecting your transactions. He discusses other top cryptocurrencies and the full-featured programming languages behind some cryptocurrency networks, 
+                      then explains how derivative assets such as NFTs figure into the landscape. 
+                      Finally, Tom covers how to track a cryptocurrency payment’s passage precisely, examines threats to cryptocurrency, and goes over connecting with others in cryptocurrency communities.
                     </p>
                 </div>
             </div>
-            <div class="col-md-4">
-              <div class="card bg-light p-3 mb-3">
+            <div class="col-sm-4">
+              <div class="card">
                 <h4>Chapter Overview:</h4>
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item">Chapter 1: Fundamentals of bitcoin</li>
-                  <li class="list-group-item">Chapter 2: Cryptocurrencies</li>
-                  <li class="list-group-item">Chapter 3: Functionalities of cryptocurrency</li>
+                <ul>
+                  <li>Chapter 1: Fundamentals of bitcoin</li>
+                  <li>Chapter 2: Cryptocurrencies</li>
+                  <li>Chapter 3: Functionalities of cryptocurrency</li>
                 </ul>
                 <br>
                 <p>Your complimentary trial concludes at this juncture. Should you wish to proceed, you have the option to remit the subscription fee to maintain access.</p>
                 </div>
-                <button id="addCart" onclick="addLesson()">Add to Cart</button>
+                <button class = "btn "id="addCart" onclick="addLesson()">Add to Cart</button>
             </div>
         </div>
     </div>
     <script>
       function addLesson() {
-        if (confirm("Do you iwsh to add this module to your cart?") == true) {
+        if (confirm("Do you wish to add this module to your cart?") == true) {
           alert("Module has been added to cart");
         }
         else {
