--- a/courses.html
+++ b/courses.html
@@ -1,23 +1,33 @@
 <head>
-    <title>Online Website</title>
-    <meta charset="UTF-8">
+  <title>Online Website</title>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="CSS/stylesheet.css">
+  <link rel="stylesheet" href="CSS/stylesheet.css">
+  <style></style>
   </head>
     
 <body>
     <nav class="navbar navbar-expand-sm bg-success navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="homepage.html">TechTonic World</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
-          <li><a class="nav-link" href="newslines.html">NewsLines</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              User Settings
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">My courses</a></li>
+              <li><a class="dropdown-item" href="history.html">Transaction History</a></li>
+              <li><a class="dropdown-item" href="#">Settings</a></li>
+              <li><a class="dropdown-item" href="#">Certificates</a></li>
+              <li><a class="dropdown-item" href="#">My courses</a></li>
+              <li><a class="dropdown-item" href="index.html">Log out</a></li>
+            </ul>
+          </li>
+          <li><a class="nav-link" href="#">NewsLines</a></li>
           <li><a class="nav-link" href="courses.html">Courses</a></li>
           <li><a class="nav-link" href="myCart.html"><img src = "images/cart.png" class = "cartImg">Cart</a></li>
         </ul>
@@ -30,16 +40,16 @@
     </div>
 </nav>
 
-<div class="container mt-4">
+<div class="container">
   <h2>Explore New Courses and Modules</h2>
-  <div class="card mt-3">
+  <div class="card">
       <div id = "courseDetails">
           <div>
-              <img src="images/OIP.jpg">
+              <img src="images/bitcoinCrypto.jpg" id = "Bitcoin">
           </div>
           <div>
               <div class="card-body">
-                  <h5 class="card-title"><a href = "bitcoinCrypto.html">Bitcoin and Cryptocurrency</a></h5>
+                  <h3 class="card-title"><a href = "bitcoinCrypto.html">Bitcoin and Cryptocurrency</a></h3>
                   <p class="card-text">by (Insert Author)<br>Uploaded on 9th of May 2023</p>
                   <p class="card-text"><small class="text-muted">Free trial until third chapter | Cost: $110.50</small></p>
               </div>
