--- a/homepage.html
+++ b/homepage.html
@@ -14,7 +14,7 @@
 
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
-          <li class="nav-item dropdown">
+            <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               User Settings
             </a>
@@ -27,8 +27,8 @@
               <li><a class="dropdown-item" href="index.html">Log out</a></li>
             </ul>
           </li>
-          <li><a class="nav-link" href="newslines.html">NewsLines</a></li>
-          <li><a class="nav-link" href="myCourses.html">Available Courses</a></li>
+          <li><a class="nav-link" href="#">NewsLines</a></li>
+          <li><a class="nav-link" href="courses.html">Available Courses</a></li>
           <li><a class="nav-link" href="myCart.html"><img src = "images/cart.png" class = "cartImg">Cart</a></li>
         </ul>
           <form class="d-flex ms-auto" role="search">
@@ -41,7 +41,7 @@
 
 
 <br><br>
-
+<div class = "container">
   <div class="row">
     <div class="col-sm-8">
       <h1>Welcome User!</h1>
@@ -49,13 +49,13 @@
       <div class="card">
       <div class="card-body">
         <div>
-          <a href = "settings.html"><img src="images/userProfile.png" class = "userimg"></a>
+          <img src="images/userProfile.png" class = "userimg">
           <div>
           <h5 class="card-title">User_Name</h5>
           <p class="card-text">Joined: 24th January, 2023</p>
           </div>
         </div>
-    <div class="progress">
+      <div class="progress">
       <div class="progress-bar" role="progressbar"></div>
         </div>
         <p>Module in Cloud Computing: Core Skills In Progress</p>
@@ -64,17 +64,17 @@
     </div>
 
       <div class="col-sm-4">
-          <h3>View the latest trends and news on fintech!</h3>
-          <a href="newslines.html">View more here</a>
-          <div class="card mt-3">
-              <img src="images/news_image.png" class="card-img-top" alt="News Image">
+        <h3>View the latest trends and news on fintech!</h3>
+        <a href="#">View more here</a>
+        <div class="card">
+            <img src="images/newsImage1.jpg" class="card-img-top" alt="News Image">
               <div class="card-body">
                   <h5 class="card-title">(Insert News title)</h5>
                   <p class="card-text">by (insert author) uploaded on 20th of May 2024</p>
               </div>
           </div>
-          <div class="card mt-3">
-            <img src="news_image.png" class="card-img-top" alt="News Image">
+          <div class="card">
+            <img src="images/newsImage2.jpg" class="card-img-top" alt="News Image">
             <div class="card-body">
                 <h5 class="card-title">(Insert News title)</h5>
                 <p class="card-text">by (insert author) uploaded on 20th of May 2024</p>
@@ -82,5 +82,5 @@
         </div>
       </div>
   </div>
-
+</div>
 </body>
