--- a/login.html
+++ b/login.html
@@ -5,6 +5,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="CSS/stylesheet.css">
+    <style>
+      .loginDetails{
+        margin-left: 20px;
+        margin-top: 20px;
+      }
+      input{
+        border-radius: 10px;
+      }
+    </style>
     </head>
   
   <body>
@@ -22,11 +31,11 @@
   <div class = "LoginDetails">
     <h1>Login to continue</h1>
     <form action="one-timepin.html">
-        <label>Username:</label>
+        <label><h3>Username:</h3></label>
         <input type = "text" required>
         <br>
         <br>
-        <label>Password:</label>
+        <label><h3>Password:</h3></label>
         <input type="text" required>
         <br><br>
         <input type = "submit" style="background-color: blue; color: white;">
