--- a/paymentchoice.html
+++ b/paymentchoice.html
@@ -5,6 +5,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
       <link rel="stylesheet" href="CSS/stylesheet.css">
+      <style>
+        .container{
+          margin-top: 50px;
+        }
+      </style>
     </head>
       
   <body>
@@ -14,7 +19,20 @@
   
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav">
-            <li><a class="nav-link" href="newslines.html">NewsLines</a></li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                User Settings
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">My courses</a></li>
+                <li><a class="dropdown-item" href="history.html">Transaction History</a></li>
+                <li><a class="dropdown-item" href="#">Settings</a></li>
+                <li><a class="dropdown-item" href="#">Certificates</a></li>
+                <li><a class="dropdown-item" href="#">My courses</a></li>
+                <li><a class="dropdown-item" href="index.html">Log out</a></li>
+              </ul>
+            </li>
+            <li><a class="nav-link" href="#">NewsLines</a></li>
             <li><a class="nav-link" href="courses.html">Courses</a></li>
             <li><a class="nav-link" href="myCart.html"><img src = "images/cart.png" class = "cartImg">Cart</a></li>
           </ul>
@@ -25,3 +43,42 @@
         </div>
       </div>
   </nav>
+  <div class="container">
+    <div class="row">
+        <div class="col-sm-6">
+            <h2>Payment Options:</h2>
+            <p>Choose either methods for initiating payment.</p>
+            <a href = "digitalWallet.html"><button class="btn btn-success"><p id = "digitalWallet">Pay by Digital Wallet: Apple Pay</p></button></a>
+            <br><br>
+            <a href = "creditCard.html"><button class="btn btn-success">Pay by Credit card</button></a>
+        </div>
+        <div class="col-sm-6">
+            <h2>Supported Digital Wallets:</h2>
+            <div class="list-group">
+                <label class="list-group-item">
+                  <input type="radio" name="wallet" value="applepay" onclick="apple()"> Apple Pay
+                </label>
+                <label class="list-group-item">
+                  <input type="radio" name="wallet" value="googlepay" onclick="google()"> Google Pay
+                </label>
+                <label class="list-group-item">
+                  <input type="radio" name="wallet" value="paypal" onclick="pay()"> Paypal
+                </label>
+            </div>
+            <a href="#" class="mt-3 d-block">... other options</a>
+        </div>
+    </div>
+</div>
+<script>
+  function apple(){
+    document.getElementById("digitalWallet").innerHTML="Pay by Digital Wallet: Apple Pay";
+  }
+
+  function google(){
+    document.getElementById("digitalWallet").innerHTML="Pay by Digital Wallet: Google Pay";
+  }
+
+  function pay(){
+    document.getElementById("digitalWallet").innerHTML="Pay by Digital Wallet: Paypal";
+  }
+</script>
