--- a/qrcode.html
+++ b/qrcode.html
@@ -4,24 +4,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="CSS/stylesheet.css">
-    <style>
-    .transactionHistory {
-      margin: 20px;
-    }
-    .transactionItem {
-      background-color: #d3d3d3;
-      padding: 15px;
-      margin-bottom: 10px;
-      border-radius: 5px;
-    }
-    .transactionDate {
-      font-weight: bold;
-    }
-    .transactionTitle {
-      font-size: 20px;
-    }
-    </style>
+      <link rel="stylesheet" href="CSS/stylesheet.css">
+      <style>
+        #QRcode{
+            margin-top: 20px;
+            text-align: center;
+        }
+        #QRimg{
+            width: 20%;
+        }
+      </style>
     </head>
       
   <body>
@@ -55,24 +47,14 @@
         </div>
       </div>
   </nav>
-  <div class="transactionHistory">
-    <h2>Transaction History</h2>
-    <h3>Recently(1)</h3>
-    <hr>
-    <div class="transactionItem">
-        <div class="transactionDate">04/06/2024</div>
-        <div class="transactionTitle">Bitcoin and CryptoCurrency <p>$50.00</p></div>
-        <div>By (insert author)</div>
-    </div>
-
-    <br><br>
-
-    <h3>Earlier this week</h3>
-    <hr>
-    <div class="transactionItem">
-        <div class="transactionDate">31/05/2024</div>
-        <div class="transactionTitle">Cloud Computing: Core Skills <p>$45.50</p></div>
-        <div>By (insert author)</div>
-    </div>
-</div>
-  
+  <div id = "QRcode">
+    <h2>Continue the payment Process through the digital Wallet specifed by scanning the Qr Code below:</h2>
+    <br>
+    <a href = "homepage.html"><img src = "images/QRcode.jpg" id = "QRimg" onclick = "confirmPayment()"></a>
+  </div>
+  <script>
+    function confirmPayment(){
+        alert("Payment has been Confirmed!")
+    }
+  </script>
+  </body>
