--- a/digitalWallet.html
+++ b/digitalWallet.html
@@ -13,7 +13,7 @@
         padding-left: 20px;
         padding-right: 20px;
       }
-      .payment-details{
+      .paymentDetails{
         margin-top:20px;
       }
       hr{
@@ -54,8 +54,8 @@
       </div>
     </div>
     </nav>
-    <div class="payment-details">
-    <h2 class="payment-header">Payment Details: Digital Wallet (Apple Pay)</h2>
+    <div class="paymentDetails">
+    <h2>Payment Details: Digital Wallet (Apple Pay)</h2>
     <hr>
     <div>
       <h3>Make Payment to: TechTonic World</h3>
